--- a/defense.qmd
+++ b/defense.qmd
@@ -523,7 +523,7 @@ $$ X \approx \sum_{r=1}^R o_{ir} \cdot d_{jr} \cdot t_{kr}, \quad \text{such tha
 
 Where each $rth$ component corresponds to a unique "migration system", and the loadings $(o_{ir}, d_{jr}, t_{kr})$ represent the significance of each origin county $i$, destination county $j$, and year $k$ to each migration system $r$.
 
-## Aim 3: Component Selection 
+## Aim 3: Component Selection
 
 ![](images/aim3_elbow.png)
 
@@ -623,7 +623,7 @@ PURELY SPECULATIVE ; cannot form any conclusions based on this
 ALSO LIKELY DUE TO ESTABLISHED IRS DATA ISSUE: including steep decline 2011-2014 then sharp increases until 2016, volatility after [@dewaard2022]
 :::
 
-## Aim 3: Connection to county-level health 
+## Aim 3: Connection to county-level health
 
 $$ y_{it} = \beta_0 + \sum_{r=1}^{3} \beta_{o_r} o_{ir} + \sum_{r=1}^{3} \beta_{d_r} d_{jr} + \sum_{r=1}^{3} \beta_{t_r} t_{kr} + \sum_{n=2}^{6} \gamma_n \text{Urbanicity}_n + \mu_{it} $$
 
@@ -718,15 +718,15 @@ ONLY IF ASKED: tensor contains 21950/77327048 = 0.0002838593 non zero entries YI
 
 -   **Aim 2:**
 
-    -   There is some evidence of health-related selection occurring for migration from urban origins to urban destinations.
+    -   There is some evidence of health-related selection for migration from urban origins to urban destinations.
 
-    -   No evidence of health-related selection occurring for migration to rural destinations.
+    -   No evidence of health-related selection for migration to rural destinations.
 
 -   **Aim 3:**
 
     -   The effect of urbanicity persists even after we adjust for a county's position within a migration system.
 
-    -   Tensor decomposition is an exciting new method for distilling the complexities of migration.
+    -   State or region specific analyses may be better captured by tensor decomposition.
 :::
 
 ## Future Questions
@@ -734,7 +734,7 @@ ONLY IF ASKED: tensor contains 21950/77327048 = 0.0002838593 non zero entries YI
 ::: incremental
 -   Can we replicate the findings of Aims 2 and 3 using the ACS five year data?
 
--   Need for smaller unit of analysis (census tract? mobile device?) and more inclusive data OR state and regions specific analyses
+-   Need for smaller unit of analysis (census tract? mobile device?) and more inclusive data OR state and region specific analyses
 
 -   What will happen to places that experience forced or voluntary exodus of unauthorized immigrants?
 
@@ -779,15 +779,15 @@ Matt, dave, christine, marjory, molly and eunice, so so so many ppl
 
 ## Extras
 
-## Aim 1: Results 
+## Aim 1: Results
 
 ![](images/clipboard-3001421058.png)
 
-## Aim 1: Results 
+## Aim 1: Results
 
 ![](images/clipboard-3743999009.png)
 
-## Aim 1: Results 
+## Aim 1: Results
 
 ![](images/clipboard-3252667007.png)
 
@@ -835,7 +835,7 @@ $$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + l_i + d_{ij}) + (y_
 
 $$  amig_{it} = \frac{ \sum_{j\ne i} out_{jit} ( y_{j,t-1} + d_{ij}) + y_{i,t-1} (pop_{i, t-1} - \sum_{j\ne i} out_{ijt})}{ \sum_{j\ne i} out_{jit} + (pop_{i,t-1} - \sum_{j\ne i} out_{ijt})} +l_i$$
 
-## Aim 2: Results 
+## Aim 2: Results
 
 **Descriptive Statistics**
 
